--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -54,21 +54,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "h\n"
+     "data": {
+      "text/plain": [
+       "1840.5"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "409 * 4.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import psycopg2\n",
+    "\n",
+    "# Connect to an existing database\n",
+    "conn = psycopg2.connect(\"dbname=mettinger user=postgres\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ProgrammingError",
+     "evalue": "relation \"test\" already exists\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mProgrammingError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-cc1ea5a2dfe1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Execute a command: this creates a new table\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"CREATE TABLE test (id serial PRIMARY KEY, num integer, data varchar);\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Pass data to fill a query placeholders and let Psycopg perform\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mProgrammingError\u001b[0m: relation \"test\" already exists\n"
      ]
     }
    ],
    "source": [
-    "print(\"h\")"
+    "# Open a cursor to perform database operations\n",
+    ">>> cur = conn.cursor()\n",
+    "\n",
+    "# Execute a command: this creates a new table\n",
+    ">>> cur.execute(\"CREATE TABLE test (id serial PRIMARY KEY, num integer, data varchar);\")\n",
+    "\n",
+    "# Pass data to fill a query placeholders and let Psycopg perform\n",
+    "# the correct conversion (no more SQL injections!)\n",
+    ">>> cur.execute(\"INSERT INTO test (num, data) VALUES (%s, %s)\",\n",
+    "...      (100, \"abc'def\"))\n",
+    "\n",
+    "# Query the database and obtain data as Python objects\n",
+    ">>> cur.execute(\"SELECT * FROM test;\")\n",
+    ">>> cur.fetchone()\n",
+    "(1, 100, \"abc'def\")\n",
+    "\n",
+    "# Make the changes to the database persistent\n",
+    ">>> conn.commit()\n",
+    "\n",
+    "# Close communication with the database\n",
+    ">>> cur.close()\n",
+    ">>> conn.close()"
    ]
   },
   {
