--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -36,50 +36,6 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "784"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "28 * 28"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1840.5"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "409 * 4.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
    "outputs": [],
    "source": [
     "import psycopg2\n",
@@ -130,6 +86,27 @@
     "# Close communication with the database\n",
     ">>> cur.close()\n",
     ">>> conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "lonelyStrings = [key for (key,value) in Counter([1,2,3,1,4,2]).items() if value == 1]\n",
+    "print lonelyStrings"
    ]
   },
   {
