--- a/portfolio/portfolio.ipynb
+++ b/portfolio/portfolio.ipynb
@@ -29,8 +29,7 @@
    },
    "outputs": [],
    "source": [
-    "portfolioCSVPath = '/Users/marke/Google Drive/myPapers/myPortfolio.csv'\n",
-    "daysBack = 10"
+    "portfolioCSVPath = '/Users/marke/Google Drive/myPapers/myPortfolio.csv'"
    ]
   },
   {
