--- a/buttonApp/sqliteTest.ipynb
+++ b/buttonApp/sqliteTest.ipynb
@@ -11,14 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# DROP TABLE\n",
     "conn = sqlite3.connect('two_buttons.db')\n",
     "cur = conn.cursor()\n",
-    "cur.execute('''DROP TABLE test_table''')\n",
+    "cur.execute('''DROP TABLE button_press''')\n",
     "\n",
     "conn.commit()\n",
     "conn.close()"
@@ -26,14 +26,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CREATE TABLE\n",
     "conn = sqlite3.connect('two_buttons.db')\n",
     "cur = conn.cursor()\n",
-    "cur.execute('''CREATE TABLE test_table (comment text)''')\n",
+    "cur.execute('''CREATE TABLE button_press (timestamp text, button_id int)''')\n",
     "\n",
     "conn.commit()\n",
     "conn.close()"
@@ -41,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('2018.04.11.05.05.20.247-0, 2018.04.11.05.05.21.126-0, 2018.04.11.05.05.21.911-1, 2018.04.11.05.05.22.721-1, 2018.04.11.05.05.23.406-0, 2018.04.11.05.05.24.049-1',)]\n"
+      "[('2018.04.11.07.25.10.095', 0), ('2018.04.11.07.25.10.662', 0), ('2018.04.11.07.25.11.517', 1), ('2018.04.11.07.25.12.050', 1)]\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
     "# READ TABLE\n",
     "conn = sqlite3.connect('two_buttons.db')\n",
     "cur = conn.cursor()\n",
-    "cur.execute('''SELECT * FROM test_table''')\n",
+    "cur.execute('''SELECT * FROM button_press''')\n",
     "results = cur.fetchall()\n",
     "conn.close()\n",
     "\n",
@@ -65,15 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "# INSERT INTO TABLE\n",
     "conn = sqlite3.connect('two_buttons.db')\n",
     "cur = conn.cursor()\n",
-    "text = 'THREE'\n",
-    "cur.execute(\"INSERT INTO test_table VALUES ('%s')\" % text)\n",
+    "text = 'this_timestamp_text'\n",
+    "id = 0\n",
+    "cur.execute(\"INSERT INTO button_press VALUES ('%s','%s')\" % (text, id))\n",
     "conn.commit()\n",
     "conn.close()\n"
    ]
