--- a/coqInteraction/coqInteraction.ipynb
+++ b/coqInteraction/coqInteraction.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,9 @@
      "text": [
       "b'(Query () (Definition nat))'\n",
       "\n",
-      "b'(Answer 7 Ack)\\n'\n",
+      "b'(Feedback((doc_id 0)(span_id 1)(route 0)(contents(ProcessingIn master))))\\n'\n",
+      "b'(Feedback((doc_id 0)(span_id 1)(route 0)(contents Processed)))\\n'\n",
+      "b'(Answer 0 Ack)\\n'\n",
       "No more data\n",
       "\n",
       "\n"
@@ -143,11 +145,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Exception in thread Thread-12:\n",
+      "Exception in thread Thread-4:\n",
       "Traceback (most recent call last):\n",
-      "  File \"/home/ubuntu/src/anaconda3/envs/python36/lib/python3.6/threading.py\", line 916, in _bootstrap_inner\n",
+      "  File \"/home/ubuntu/anaconda3/lib/python3.6/threading.py\", line 916, in _bootstrap_inner\n",
       "    self.run()\n",
-      "  File \"/home/ubuntu/src/anaconda3/envs/python36/lib/python3.6/threading.py\", line 864, in run\n",
+      "  File \"/home/ubuntu/anaconda3/lib/python3.6/threading.py\", line 864, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
       "  File \"<ipython-input-2-ba18f13ddfe7>\", line 22, in _populateQueue\n",
       "    raise UnexpectedEndOfStream\n",
@@ -176,9 +178,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:python36]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-python36-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
