--- a/buttonApp/timestampAnalyze.ipynb
+++ b/buttonApp/timestampAnalyze.ipynb
@@ -105,37 +105,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "empty_table()"
+    "#empty_table()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17\n"
+      "35\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[(8, '2018.06.03.09.31.39.888', 1, 1, 'None'),\n",
-       " (9, '2018.06.03.09.31.40.597', 1, 1, 'None'),\n",
-       " (10, '2018.06.03.09.31.41.148', 0, 1, 'None'),\n",
-       " (11, '2018.06.03.09.31.41.716', 1, 1, 'None'),\n",
-       " (12, '2018.06.03.09.31.44.709', 0, 1, 'None'),\n",
-       " (13, '2018.06.03.09.31.45.208', 1, 1, 'None'),\n",
-       " (14, '2018.06.03.09.31.52.941', 0, 1, 'test'),\n",
-       " (15, '2018.06.03.09.31.54.129', 1, 1, 'test'),\n",
-       " (16, '2018.06.03.09.31.55.597', 0, 1, 'test'),\n",
-       " (17, '2018.06.03.09.31.56.119', 1, 1, 'test')]"
+       "[(26, '2018.06.03.16.54.47.390', 1, 1, 'test'),\n",
+       " (27, '2018.06.03.16.54.47.973', 1, 1, 'test'),\n",
+       " (28, '2018.06.03.16.54.48.691', 0, 1, 'test'),\n",
+       " (29, '2018.06.03.16.57.25.838', 0, 1, 'None'),\n",
+       " (30, '2018.06.03.16.57.27.051', 1, 1, 'None'),\n",
+       " (31, '2018.06.03.16.57.27.568', 1, 1, 'None'),\n",
+       " (32, '2018.06.04.06.36.23.492', 0, 1, 'ww'),\n",
+       " (33, '2018.06.04.06.36.24.242', 1, 1, 'ww'),\n",
+       " (34, '2018.06.04.06.36.24.821', 0, 1, 'ww'),\n",
+       " (35, '2018.06.04.06.36.25.336', 1, 1, 'ww')]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,22 +955,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "matplotlib.figure.Figure"
+       "['hel-lo', '1', '2']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(fig)"
+    "'hel-lo---1---2'.split('---')"
    ]
   },
   {
