--- a/coqInteraction/coqInteraction.ipynb
+++ b/coqInteraction/coqInteraction.ipynb
@@ -2,22 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-25:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ubuntu/anaconda3/lib/python3.6/threading.py\", line 916, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"/home/ubuntu/anaconda3/lib/python3.6/threading.py\", line 864, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"<ipython-input-80-ec69062adc49>\", line 28, in _populateQueue\n",
+      "    raise UnexpectedEndOfStream\n",
+      "UnexpectedEndOfStream\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "from threading import Thread\n",
     "from queue import Queue, Empty\n",
     "from subprocess import Popen, PIPE\n",
-    "from time import sleep"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from time import sleep\n",
+    "import numpy as np\n",
+    "\n",
     "class NonBlockingStreamReader:\n",
     "\n",
     "    def __init__(self, stream):\n",
@@ -57,6 +68,7 @@
     "\n",
     "def output_from_command(command=None):\n",
     "    if command:\n",
+    "        command = command.encode()\n",
     "        p.stdin.write(command)\n",
     "        p.stdin.flush()\n",
     "    outputList = []\n",
@@ -66,105 +78,68 @@
     "            outputList.append('No more data\\n\\n')\n",
     "            return outputList\n",
     "        else:\n",
-    "            outputList.append(output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b'(Feedback((doc_id 0)(span_id 0)(route 0)(contents(FileLoaded Coq.Init.Prelude /home/ubuntu/.opam/4.06.1/lib/coq/theories/Init/Prelude.vo))))\\n'\n",
-      "b'(Feedback((doc_id 0)(span_id 0)(route 0)(contents(FileLoaded Coq.Init.Notations /home/ubuntu/.opam/4.06.1/lib/coq/theories/Init/Notations.vo))))\\n'\n",
-      "b'(Feedback((doc_id 0)(span_id 0)(route 0)(contents(FileLoaded Coq.Init.Logic /home/ubuntu/.opam/4.06.1/lib/coq/theories/Init/Logic.vo))))\\n'\n",
-      "b'(Feedback((doc_id 0)(span_id 0)(route 0)(contents(FileLoaded Coq.Init.Datatypes /home/ubuntu/.opam/4.06.1/lib/coq/theories/Init/Datatypes.vo))))\\n'\n",
-      "b'(Feedback((doc_id 0)(span_id 0)(route 0)(contents(FileLoaded Coq.Init.Logic_Type /home/ubuntu/.opam/4.06.1/lib/coq/theories/Init/Logic_Type.vo))))\\n'\n",
-      "b'(Feedback((doc_id 0)(span_id 0)(route 0)(contents(FileLoaded Coq.Init.Specif /home/ubuntu/.opam/4.06.1/lib/coq/theories/Init/Specif.vo))))\\n'\n",
-      "b'(Feedback((doc_id 0)(span_id 0)(route 0)(contents(FileLoaded Coq.Init.Decimal /home/ubuntu/.opam/4.06.1/lib/coq/theories/Init/Decimal.vo))))\\n'\n",
-      "b'(Feedback((doc_id 0)(span_id 0)(route 0)(contents(FileLoaded Coq.Init.Nat /home/ubuntu/.opam/4.06.1/lib/coq/theories/Init/Nat.vo))))\\n'\n",
-      "b'(Feedback((doc_id 0)(span_id 0)(route 0)(contents(FileLoaded Coq.Init.Peano /home/ubuntu/.opam/4.06.1/lib/coq/theories/Init/Peano.vo))))\\n'\n",
-      "b'(Feedback((doc_id 0)(span_id 0)(route 0)(contents(FileLoaded Coq.Init.Wf /home/ubuntu/.opam/4.06.1/lib/coq/theories/Init/Wf.vo))))\\n'\n",
-      "b'(Feedback((doc_id 0)(span_id 0)(route 0)(contents(FileLoaded Coq.Init.Tactics /home/ubuntu/.opam/4.06.1/lib/coq/theories/Init/Tactics.vo))))\\n'\n",
-      "b'(Feedback((doc_id 0)(span_id 0)(route 0)(contents(FileLoaded Coq.Init.Tauto /home/ubuntu/.opam/4.06.1/lib/coq/theories/Init/Tauto.vo))))\\n'\n",
-      "b'(Feedback((doc_id 0)(span_id 1)(route 0)(contents(ProcessingIn master))))\\n'\n",
-      "b'(Feedback((doc_id 0)(span_id 1)(route 0)(contents Processed)))\\n'\n",
-      "No more data\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "#p = Popen([\"/home/ubuntu/.opam/4.06.1/bin/sertop\",\"--printer=human\"], stdin=PIPE, stdout=PIPE, shell=True)\n",
+    "            outputList.append(output)\n",
+    "            \n",
+    "def pretty(d, indent=0):\n",
+    "    for key, value in d.items():\n",
+    "        print('\\t' * indent + str(key))\n",
+    "        if isinstance(value, dict):\n",
+    "            pretty(value, indent+1)\n",
+    "        elif isinstance(value, list):\n",
+    "            for i in value:\n",
+    "                print('\\t' * (indent+1) + str(i))\n",
+    "        else:\n",
+    "            print('\\t' * (indent+1) + str(value))\n",
+    "\n",
+    "def doAdd(coqString, resultDict):\n",
+    "    commandExtended = '(Add () \"%s\")' % coqString\n",
+    "    result = output_from_command(command=commandExtended)[-3].decode('ASCII')\n",
+    "    start = result.find(\"Added\")\n",
+    "    end = result.find(\"((\")\n",
+    "    thisID = result[start + 6:end]\n",
+    "    \n",
+    "    execCommand = '(Exec %s)' % thisID\n",
+    "    execResult = output_from_command(execCommand)\n",
+    "    \n",
+    "    goalCommand = '(Query ((pp ((pp_format PpStr)))) Goals)'\n",
+    "    goalResult = output_from_command(goalCommand)\n",
+    "    \n",
+    "    result = goalResult[1].decode('ASCII').replace('\\\\n','\\n')\n",
+    "    \n",
+    "    start = result.find('\"')\n",
+    "    result = result[start + 1:]\n",
+    "    end = result.find('\"')\n",
+    "    result = result[:end]\n",
+    "   \n",
+    "    goalList = result.strip().split(\"\\n\\n\")\n",
+    "   \n",
+    "    result = [i.split('\\n============================\\n') for i in goalList]\n",
+    "    result = [(i[0].strip().split('\\n'),i[1].replace('\\n','')) for i in result]\n",
+    "    result = [([j.strip() for j in i[0]], \" \".join(i[1].split())) for i in result]\n",
+    "    \n",
+    "    if coqString in resultDict.keys():\n",
+    "        resultDict[coqString + \"     duplicate: \" + str(np.random.randint(0,1000))] = result\n",
+    "    else:\n",
+    "        resultDict[coqString] = result\n",
+    "    return resultDict\n",
+    "    \n",
+    "def doCommand(command, resultDict={}):\n",
+    "    if command in resultDict.keys():\n",
+    "        resultDict[command + \"     duplicate: \" + str(np.random.randint(0,1000))] = output_from_command(command=command)\n",
+    "    else:\n",
+    "        resultDict[command] = output_from_command(command=command)\n",
+    "    return resultDict\n",
+    "\n",
+    "try:\n",
+    "    p.terminate()\n",
+    "except:\n",
+    "    pass\n",
+    "\n",
     "p = Popen([\"/home/ubuntu/.opam/4.06.1/bin/sertop\"], stdin=PIPE, stdout=PIPE, shell=True)\n",
     "nbsr = NonBlockingStreamReader(p.stdout)\n",
-    "for i in output_from_command(None):\n",
-    "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "commandList = [b'(Add () \"Lemma addn0 n : n + 0 = n. Proof. now induction n. Qed.\")\\n',\n",
-    "               b'(Exec 5)',\n",
-    "               b'(Query ((sid 3)) Goals)',\n",
-    "               b'(Query ((sid 3) (pp ((pp_format PpStr)))) Goals)',\n",
-    "               b'(Query ((sid 4)) Ast)',\n",
-    "               b'(pp_ex (Print () (CoqConstr (App (Rel 0) ((Rel 0))))))',\n",
-    "               b'(Query () (Vernac \"Print nat. \"))',\n",
-    "               b'(Query () (Definition nat))']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "b'(Query () (Definition nat))'\n",
-      "\n",
-      "b'(Feedback((doc_id 0)(span_id 1)(route 0)(contents(ProcessingIn master))))\\n'\n",
-      "b'(Feedback((doc_id 0)(span_id 1)(route 0)(contents Processed)))\\n'\n",
-      "b'(Answer 0 Ack)\\n'\n",
-      "No more data\n",
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-4:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/ubuntu/anaconda3/lib/python3.6/threading.py\", line 916, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/home/ubuntu/anaconda3/lib/python3.6/threading.py\", line 864, in run\n",
-      "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"<ipython-input-2-ba18f13ddfe7>\", line 22, in _populateQueue\n",
-      "    raise UnexpectedEndOfStream\n",
-      "UnexpectedEndOfStream\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "command = commandList[7]\n",
     "\n",
-    "print(command)\n",
-    "print()\n",
-    "for i in output_from_command(command=command):\n",
-    "    print(i)"
+    "load = output_from_command(None) # omits Coq initialization data from results\n",
+    "resultDict = {}"
    ]
   },
   {
@@ -172,7 +147,157 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "command = '(Add () \"Theorem my_first_proof : (forall A : Prop, A -> A).\")'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "command = '(Add () \"Lemma addn0 n : n + 0 = n. Proof. induction n.\")'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "command = '(Add () \"Theorem test_prop : forall A B C:Prop, (A -> B -> C) -> (A -> B) -> A -> C.\")'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "command = '(Query ((sid 3)) Goals)'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "command = '(Query ( (pp ((pp_format PpStr))) (sid 2) ) Ast)'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "command = '(Cancel (0))'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "command = '(Exec 7)'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "command = '(Query () Goals)'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "command = '(Query ((pp ((pp_format PpStr)))) Goals)'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "command = '(Add () \"intros.\")'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coqString = \"Theorem test_prop : forall A B C:Prop, (A -> B -> C) -> (A -> B) -> A -> C.  Proof.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coqString = \"intro.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coqString = \"Lemma addn0 n : n + 0 = n. Proof. induction n.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lemma addn0 n : n + 0 = n. Proof. induction n.\n",
+      "\t(['none'], '0 + 0 = 0')\n",
+      "\t(['IHn : n + 0 = n', 'n : nat'], 'S n + 0 = S n')\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultDict = doAdd(coqString,resultDict)\n",
+    "pretty(resultDict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#resultDict = doCommand(command, resultDict)\n",
+    "#pretty(resultDict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#resultDict = {thisCommand:output_from_command(thisCommand) for thisCommand in commandList}\n",
+    "#pretty(resultDict)"
+   ]
   }
  ],
  "metadata": {
