--- a/buttonApp/timestampAnalyze.ipynb
+++ b/buttonApp/timestampAnalyze.ipynb
@@ -110,32 +110,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35\n"
+      "104\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[(26, '2018.06.03.16.54.47.390', 1, 1, 'test'),\n",
-       " (27, '2018.06.03.16.54.47.973', 1, 1, 'test'),\n",
-       " (28, '2018.06.03.16.54.48.691', 0, 1, 'test'),\n",
-       " (29, '2018.06.03.16.57.25.838', 0, 1, 'None'),\n",
-       " (30, '2018.06.03.16.57.27.051', 1, 1, 'None'),\n",
-       " (31, '2018.06.03.16.57.27.568', 1, 1, 'None'),\n",
-       " (32, '2018.06.04.06.36.23.492', 0, 1, 'ww'),\n",
-       " (33, '2018.06.04.06.36.24.242', 1, 1, 'ww'),\n",
-       " (34, '2018.06.04.06.36.24.821', 0, 1, 'ww'),\n",
-       " (35, '2018.06.04.06.36.25.336', 1, 1, 'ww')]"
+       "[(102, '2018.06.12.13.17.01.989', 0, 3, 'aaa'),\n",
+       " (103, '2018.06.12.13.17.03.441', 1, 3, 'aaa'),\n",
+       " (104, '2018.06.12.13.17.04.143', 1, 3, 'aaa'),\n",
+       " (105, '2018.06.12.13.17.04.946', 1, 3, 'aaa'),\n",
+       " (106, '2018.06.15.14.31.04.773', 0, 1, 'None'),\n",
+       " (107, '2018.06.15.14.31.08.916', 1, 1, 'None'),\n",
+       " (108, '2018.06.15.14.31.22.382', 0, 1, 'a'),\n",
+       " (109, '2018.06.15.14.32.07.923', 0, 1, 'b'),\n",
+       " (110, '2018.06.15.14.32.08.843', 0, 1, 'b'),\n",
+       " (111, '2018.06.15.14.32.09.327', 0, 1, 'b')]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
