--- a/coqInteraction/coqInteraction.ipynb
+++ b/coqInteraction/coqInteraction.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Exception in thread Thread-25:\n",
+      "Exception in thread Thread-5:\n",
       "Traceback (most recent call last):\n",
       "  File \"/home/ubuntu/anaconda3/lib/python3.6/threading.py\", line 916, in _bootstrap_inner\n",
       "    self.run()\n",
       "  File \"/home/ubuntu/anaconda3/lib/python3.6/threading.py\", line 864, in run\n",
       "    self._target(*self._args, **self._kwargs)\n",
-      "  File \"<ipython-input-80-ec69062adc49>\", line 28, in _populateQueue\n",
+      "  File \"<ipython-input-20-8ea730423803>\", line 28, in _populateQueue\n",
       "    raise UnexpectedEndOfStream\n",
       "UnexpectedEndOfStream\n",
       "\n"
@@ -91,31 +91,83 @@
     "        else:\n",
     "            print('\\t' * (indent+1) + str(value))\n",
     "\n",
-    "def doAdd(coqString, resultDict):\n",
+    "def findID(serapiString):\n",
+    "    start = serapiString.find(\"Added\")\n",
+    "    end = serapiString.find(\"((\")\n",
+    "    thisID = serapiString[start + 6:end]\n",
+    "    return thisID\n",
+    "    \n",
+    "    \n",
+    "def doAdd(coqString, resultDict, debugList = []):\n",
+    "    \n",
+    "    if 10 in debugList:\n",
+    "        debugList = [0,1,2,3]\n",
+    "        \n",
     "    commandExtended = '(Add () \"%s\")' % coqString\n",
-    "    result = output_from_command(command=commandExtended)[-3].decode('ASCII')\n",
+    "    \n",
+    "    if 0 in debugList:\n",
+    "        print(\"Add command: \")\n",
+    "        print(commandExtended)\n",
+    "        print()\n",
+    "        \n",
+    "    addResult = output_from_command(command=commandExtended)[-3].decode('ASCII')\n",
+    "    \n",
+    "    if 1 in debugList:\n",
+    "        print(\"Add command result: \")\n",
+    "        print(addResult)\n",
+    "        print()\n",
+    "        \n",
+    "    thisID = findID(addResult)\n",
+    "    \n",
+    "    '''\n",
     "    start = result.find(\"Added\")\n",
     "    end = result.find(\"((\")\n",
     "    thisID = result[start + 6:end]\n",
+    "    '''\n",
     "    \n",
     "    execCommand = '(Exec %s)' % thisID\n",
     "    execResult = output_from_command(execCommand)\n",
     "    \n",
+    "    if 2 in debugList:\n",
+    "        print(\"Exec result: \")\n",
+    "        print(execResult)\n",
+    "        print()\n",
+    "    \n",
+    "    \n",
+    "    if sum([1 if \"Error\" in i.decode('ASCII') else 0 for i in execResult if type(i) == bytes]) > 0:\n",
+    "        print(\"Error...\")\n",
+    "        cancelCommand = '(Cancel (%s))' % thisID\n",
+    "        cancelResult = output_from_command(command=cancelCommand)\n",
+    "        print(\"Cancel result: \")\n",
+    "        print(cancelResult)\n",
+    "        return resultDict\n",
+    "    \n",
     "    goalCommand = '(Query ((pp ((pp_format PpStr)))) Goals)'\n",
     "    goalResult = output_from_command(goalCommand)\n",
     "    \n",
-    "    result = goalResult[1].decode('ASCII').replace('\\\\n','\\n')\n",
+    "    if 3 in debugList:\n",
+    "        print(\"Goal Query result: \")\n",
+    "        print(goalResult)\n",
+    "        print()\n",
     "    \n",
-    "    start = result.find('\"')\n",
-    "    result = result[start + 1:]\n",
-    "    end = result.find('\"')\n",
-    "    result = result[:end]\n",
-    "   \n",
-    "    goalList = result.strip().split(\"\\n\\n\")\n",
-    "   \n",
-    "    result = [i.split('\\n============================\\n') for i in goalList]\n",
-    "    result = [(i[0].strip().split('\\n'),i[1].replace('\\n','')) for i in result]\n",
-    "    result = [([j.strip() for j in i[0]], \" \".join(i[1].split())) for i in result]\n",
+    "    if len(goalResult) == 1:\n",
+    "        result =  [(['none'],None)]\n",
+    "    else:\n",
+    "        result = goalResult[1].decode('ASCII').replace('\\\\n','\\n')\n",
+    "    \n",
+    "    if '\"' not in result:\n",
+    "        result = [(['none'],None)]\n",
+    "    else:\n",
+    "        start = result.find('\"')\n",
+    "        result = result[start + 1:]\n",
+    "        end = result.find('\"')\n",
+    "        result = result[:end]\n",
+    "\n",
+    "        goalList = result.strip().split(\"\\n\\n\")\n",
+    "\n",
+    "        result = [i.split('\\n============================\\n') for i in goalList]\n",
+    "        result = [(i[0].strip().split('\\n'),i[1].replace('\\n','')) for i in result]\n",
+    "        result = [([j.strip() for j in i[0]], \" \".join(i[1].split())) for i in result]\n",
     "    \n",
     "    if coqString in resultDict.keys():\n",
     "        resultDict[coqString + \"     duplicate: \" + str(np.random.randint(0,1000))] = result\n",
@@ -140,6 +192,119 @@
     "\n",
     "load = output_from_command(None) # omits Coq initialization data from results\n",
     "resultDict = {}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coqString = \"From Coq Require Import Arith.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coqString = \"Lemma example : forall x y, x <= 10 -> 10 <= y -> x <= y. Proof.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coqString = \"apply le_trans with (m := 10).\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coqString = \"apply le_trans.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coqString = \"Theorem test_prop : forall A B C:Prop, (A -> B -> C) -> (A -> B) -> A -> C.  Proof.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coqString = \"assumption. assumption. Qed.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coqString = \"intros.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coqString = \"Lemma addn0 n : n + 0 = n. Proof. induction n.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coqString = \"Variables A B C: Prop.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coqString = \"Goal (A -> B -> C) -> (A -> B) -> A -> C.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Goal dictionary: \n",
+      "Theorem test_prop : forall A B C:Prop, (A -> B -> C) -> (A -> B) -> A -> C.  Proof.\n",
+      "\t(['none'], 'forall A B C : Prop, (A -> B -> C) -> (A -> B) -> A -> C')\n",
+      "intros.\n",
+      "\t(['H1 : A', 'H0 : A -> B', 'H : A -> B -> C', 'A, B, C : Prop'], 'C')\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultDict = doAdd(coqString, resultDict, debugList = [])\n",
+    "print(\"Goal dictionary: \")\n",
+    "pretty(resultDict)"
    ]
   },
   {
@@ -234,49 +399,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "coqString = \"Theorem test_prop : forall A B C:Prop, (A -> B -> C) -> (A -> B) -> A -> C.  Proof.\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coqString = \"intro.\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "coqString = \"Lemma addn0 n : n + 0 = n. Proof. induction n.\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lemma addn0 n : n + 0 = n. Proof. induction n.\n",
-      "\t(['none'], '0 + 0 = 0')\n",
-      "\t(['IHn : n + 0 = n', 'n : nat'], 'S n + 0 = S n')\n"
-     ]
-    }
-   ],
-   "source": [
-    "resultDict = doAdd(coqString,resultDict)\n",
-    "pretty(resultDict)"
+    "type(b'hello')"
    ]
   },
   {
@@ -286,16 +413,6 @@
    "outputs": [],
    "source": [
     "#resultDict = doCommand(command, resultDict)\n",
-    "#pretty(resultDict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#resultDict = {thisCommand:output_from_command(thisCommand) for thisCommand in commandList}\n",
     "#pretty(resultDict)"
    ]
   }
