--- a/flashcards_tmi/flashcards_tmi.ipynb
+++ b/flashcards_tmi/flashcards_tmi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,26 +13,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "flashcardCSVIn = \"/Users/mettinger/Desktop/flashcards_TMI - Sheet1.csv\"\n",
+    "flashcardCSVIn = \"/Users/mettinger/Downloads/flashcards_TMI - Sheet1.csv\"\n",
     "flashcardCSVOut = \"/Users/mettinger/Desktop/flashcards_tmi.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tmiSheet = pd.read_csv(flashcardCSVFile)"
+    "tmiSheet = pd.read_csv(flashcardCSVIn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
