--- a/scratch_mac.ipynb
+++ b/scratch_mac.ipynb
@@ -74,7 +74,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from PyPDF2 import PdfFileReader\n",
+    " \n",
+    " \n",
+    "def text_extractor(path):\n",
+    "    with open(path, 'rb') as f:\n",
+    "        pdf = PdfFileReader(f)\n",
+    " \n",
+    "        # get the first page\n",
+    "        page = pdf.getPage(1)\n",
+    "        print(page)\n",
+    "        print('Page type: {}'.format(str(type(page))))\n",
+    " \n",
+    "        text = page.extractText()\n",
+    "        print(text)\n",
+    " \n",
+    " \n",
+    "if __name__ == '__main__':\n",
+    "    path = 'reportlab-sample.pdf'\n",
+    "    text_extractor(path)"
+   ]
   }
  ],
  "metadata": {
@@ -93,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
