--- a/scratch_mac.ipynb
+++ b/scratch_mac.ipynb
@@ -95,6 +95,103 @@
     "    path = 'reportlab-sample.pdf'\n",
     "    text_extractor(path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "require.config({\n",
+       "    paths: {\n",
+       "        d3: 'https://d3js.org/d3.v5.min'\n",
+       "    }\n",
+       "});"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "require.config({\n",
+    "    paths: {\n",
+    "        d3: 'https://d3js.org/d3.v5.min'\n",
+    "    }\n",
+    "});"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "(function(element) {\n",
+       "    require(['d3'], function(d3) {   \n",
+       "        var data = [1, 2, 4, 8, 16, 8, 4, 2, 1]\n",
+       "\n",
+       "        var svg = d3.select(element.get(0)).append('svg')\n",
+       "            .attr('width', 400)\n",
+       "            .attr('height', 200);\n",
+       "        svg.selectAll('circle')\n",
+       "            .data(data)\n",
+       "            .enter()\n",
+       "            .append('circle')\n",
+       "            .attr(\"cx\", function(d, i) {return 40 * (i + 1);})\n",
+       "            .attr(\"cy\", function(d, i) {return 100 + 30 * (i % 3 - 1);})\n",
+       "            .style(\"fill\", \"#1570a4\")\n",
+       "            .transition().duration(2000)\n",
+       "            .attr(\"r\", function(d) {return 2*d;})\n",
+       "        ;\n",
+       "    })\n",
+       "})(element);"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "(function(element) {\n",
+    "    require(['d3'], function(d3) {   \n",
+    "        var data = [1, 2, 4, 8, 16, 8, 4, 2, 1]\n",
+    "\n",
+    "        var svg = d3.select(element.get(0)).append('svg')\n",
+    "            .attr('width', 400)\n",
+    "            .attr('height', 200);\n",
+    "        svg.selectAll('circle')\n",
+    "            .data(data)\n",
+    "            .enter()\n",
+    "            .append('circle')\n",
+    "            .attr(\"cx\", function(d, i) {return 40 * (i + 1);})\n",
+    "            .attr(\"cy\", function(d, i) {return 100 + 30 * (i % 3 - 1);})\n",
+    "            .style(\"fill\", \"#1570a4\")\n",
+    "            .transition().duration(2000)\n",
+    "            .attr(\"r\", function(d) {return 2*d;})\n",
+    "        ;\n",
+    "    })\n",
+    "})(element);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
