--- a/web3/ijavascriptTest.ipynb
+++ b/web3/ijavascriptTest.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "'100000000000000000000'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,9 +119,143 @@
     "      \"signature\": \"0x6d4ce63c\"\n",
     "    }\n",
     "  ]\n",
-    "const address = '0x85D3a064743A72cD2Da2ce25be69Ae53fc70D7FD'\n",
+    "const address = \"0x85D3a064743A72cD2Da2ce25be69Ae53fc70D7FD\"\n",
     "\n",
     "const contract = new web3.eth.Contract(abi, address)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "const obj = require(\"/Users/mettinger/github/slotmachine/slotmachine-frontend/src/ethereum/SlotMachine.json\");\n",
+    "const address = \"0x85D3a064743A72cD2Da2ce25be69Ae53fc70D7FD\"\n",
+    "const contract = new web3.eth.Contract(obj.abi, address)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ { logIndex: 0,\n",
+      "    transactionIndex: 0,\n",
+      "    transactionHash:\n",
+      "     '0xd33daabea7a873dafd4c0d5973407ae4e723eb011a7282454d00d701c393aedc',\n",
+      "    blockHash:\n",
+      "     '0x1de3d9ce811677cdb97582dedabf8496a88ee449310317bd6dac28e622ff8889',\n",
+      "    blockNumber: 91,\n",
+      "    address: '0x85D3a064743A72cD2Da2ce25be69Ae53fc70D7FD',\n",
+      "    type: 'mined',\n",
+      "    id: 'log_c37fb2d7',\n",
+      "    returnValues:\n",
+      "     Result {\n",
+      "       '0': '0x3B89C5Fd03328Cec75Ae2dba3D5C7Ab71F4FAe36',\n",
+      "       '1': '100000000000000000',\n",
+      "       '2': '91',\n",
+      "       '3': '36',\n",
+      "       user: '0x3B89C5Fd03328Cec75Ae2dba3D5C7Ab71F4FAe36',\n",
+      "       amount: '100000000000000000',\n",
+      "       block: '91',\n",
+      "       counter: '36' },\n",
+      "    event: 'BetPlaced',\n",
+      "    signature:\n",
+      "     '0x7363e6581df4db69463222156be4a09656528b9f1302890fa4c0b60819b69fc6',\n",
+      "    raw:\n",
+      "     { data:\n",
+      "        '0x0000000000000000000000003b89c5fd03328cec75ae2dba3d5c7ab71f4fae36000000000000000000000000000000000000000000000000016345785d8a0000000000000000000000000000000000000000000000000000000000000000005b0000000000000000000000000000000000000000000000000000000000000024',\n",
+      "       topics: [Array] } },\n",
+      "  { logIndex: 0,\n",
+      "    transactionIndex: 0,\n",
+      "    transactionHash:\n",
+      "     '0xbdc4f21741b1bccaea1bf763dac08e187d2908f75c6c6c8b9cdcc583072ef551',\n",
+      "    blockHash:\n",
+      "     '0x57fd4d3588341e3af4b3c63979294dbbd41ca96c227d83a0f30dcbfa73f123bb',\n",
+      "    blockNumber: 92,\n",
+      "    address: '0x85D3a064743A72cD2Da2ce25be69Ae53fc70D7FD',\n",
+      "    type: 'mined',\n",
+      "    id: 'log_4e802813',\n",
+      "    returnValues: Result { '0': '36', '1': '0', id: '36', award: '0' },\n",
+      "    event: 'Awarded',\n",
+      "    signature:\n",
+      "     '0xde375d5f6628b29fc599d7672d0d7475a6b065940041879fa73f4e1db7d3ac20',\n",
+      "    raw:\n",
+      "     { data:\n",
+      "        '0x00000000000000000000000000000000000000000000000000000000000000240000000000000000000000000000000000000000000000000000000000000000',\n",
+      "       topics: [Array] } } ]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[ { logIndex: 0,\n",
+       "    transactionIndex: 0,\n",
+       "    transactionHash:\n",
+       "     '0xd33daabea7a873dafd4c0d5973407ae4e723eb011a7282454d00d701c393aedc',\n",
+       "    blockHash:\n",
+       "     '0x1de3d9ce811677cdb97582dedabf8496a88ee449310317bd6dac28e622ff8889',\n",
+       "    blockNumber: 91,\n",
+       "    address: '0x85D3a064743A72cD2Da2ce25be69Ae53fc70D7FD',\n",
+       "    type: 'mined',\n",
+       "    id: 'log_c37fb2d7',\n",
+       "    returnValues:\n",
+       "     Result {\n",
+       "       '0': '0x3B89C5Fd03328Cec75Ae2dba3D5C7Ab71F4FAe36',\n",
+       "       '1': '100000000000000000',\n",
+       "       '2': '91',\n",
+       "       '3': '36',\n",
+       "       user: '0x3B89C5Fd03328Cec75Ae2dba3D5C7Ab71F4FAe36',\n",
+       "       amount: '100000000000000000',\n",
+       "       block: '91',\n",
+       "       counter: '36' },\n",
+       "    event: 'BetPlaced',\n",
+       "    signature:\n",
+       "     '0x7363e6581df4db69463222156be4a09656528b9f1302890fa4c0b60819b69fc6',\n",
+       "    raw:\n",
+       "     { data:\n",
+       "        '0x0000000000000000000000003b89c5fd03328cec75ae2dba3d5c7ab71f4fae36000000000000000000000000000000000000000000000000016345785d8a0000000000000000000000000000000000000000000000000000000000000000005b0000000000000000000000000000000000000000000000000000000000000024',\n",
+       "       topics: [Array] } },\n",
+       "  { logIndex: 0,\n",
+       "    transactionIndex: 0,\n",
+       "    transactionHash:\n",
+       "     '0xbdc4f21741b1bccaea1bf763dac08e187d2908f75c6c6c8b9cdcc583072ef551',\n",
+       "    blockHash:\n",
+       "     '0x57fd4d3588341e3af4b3c63979294dbbd41ca96c227d83a0f30dcbfa73f123bb',\n",
+       "    blockNumber: 92,\n",
+       "    address: '0x85D3a064743A72cD2Da2ce25be69Ae53fc70D7FD',\n",
+       "    type: 'mined',\n",
+       "    id: 'log_4e802813',\n",
+       "    returnValues: Result { '0': '36', '1': '0', id: '36', award: '0' },\n",
+       "    event: 'Awarded',\n",
+       "    signature:\n",
+       "     '0xde375d5f6628b29fc599d7672d0d7475a6b065940041879fa73f4e1db7d3ac20',\n",
+       "    raw:\n",
+       "     { data:\n",
+       "        '0x00000000000000000000000000000000000000000000000000000000000000240000000000000000000000000000000000000000000000000000000000000000',\n",
+       "       topics: [Array] } } ]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// Get Contract Event Stream\n",
+    "contract.getPastEvents(\n",
+    "  'AllEvents',\n",
+    "  {\n",
+    "    fromBlock: 91,\n",
+    "    toBlock: 92\n",
+    "  },\n",
+    "  (err, events) => { console.log(events) }\n",
+    ")"
    ]
   },
   {
@@ -213,23 +347,6 @@
     "const address = '0xd26114cd6EE289AccF82350c8d8487fedB8A0C07'\n",
     "\n",
     "const contract = new web3.eth.Contract(abi, address)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "// Get Contract Event Stream\n",
-    "contract.getPastEvents(\n",
-    "  'AllEvents',\n",
-    "  {\n",
-    "    fromBlock: 6500000,\n",
-    "    toBlock: 6500100\n",
-    "  },\n",
-    "  (err, events) => { console.log(events) }\n",
-    ")"
    ]
   },
   {
@@ -453,7 +570,7 @@
    "file_extension": ".js",
    "mimetype": "application/javascript",
    "name": "javascript",
-   "version": "11.1.0"
+   "version": "11.12.0"
   }
  },
  "nbformat": 4,
